--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "antd": "^2.10.2",
     "babel-plugin-import": "^1.2.1",
+    "es6-promise": "^4.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "standard-error": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.0",
