--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-  "presets": ["es2015", "react", "stage-1"],
+  "presets": ["es2015", "react", "stage-0"],
   "plugins": [
+    "transform-runtime",
     "transform-decorators-legacy",
     ["import", {
       "libraryName": "antd"
