--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.0.0",
-    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
