--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
   "presets": ["es2015", "react", "stage-0"],
+  "env": {
+   "development": {
+     "presets": ["react-hmre"]
+    }
+  },
   "plugins": [
     "transform-runtime",
     "transform-decorators-legacy",
