--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "antd": "^2.10.2",
+    "array-to-tree": "^2.2.0",
     "babel-plugin-import": "^1.2.1",
     "enquire.js": "^2.1.6",
     "es6-promise": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "lazyimage": "^2.1.2",
     "rc-queue-anim": "^1.0.5",
     "rc-tween-one": "^1.2.7",
-    "lazyimage": "^2.1.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
