--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^2.10.2",
     "array-to-tree": "^2.2.0",
     "babel-plugin-import": "^1.2.1",
+    "classnames": "^2.2.5",
     "enquire.js": "^2.1.6",
     "es6-promise": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
