--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "array-to-tree": "^2.2.0",
     "babel-plugin-import": "^1.2.1",
     "classnames": "^2.2.5",
+    "draftjs-to-html": "^0.7.2",
     "enquire.js": "^2.1.6",
     "es6-promise": "^4.1.0",
+    "html-to-draftjs": "^0.1.0-beta7",
     "isomorphic-fetch": "^2.2.1",
     "lazyimage": "^2.1.2",
+    "prop-types": "^15.5.10",
     "rc-queue-anim": "^1.0.5",
     "rc-tween-one": "^1.2.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-draft-wysiwyg": "^1.10.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
