--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "rc-queue-anim": "^1.0.5",
     "rc-tween-one": "^1.2.7",
     "react": "^15.5.4",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.5.4",
     "react-draft-wysiwyg": "^1.10.0",
     "react-redux": "^5.0.5",
@@ -60,6 +62,7 @@
     "jest": "20.0.3",
     "object-assign": "4.1.1",
     "postcss": "^6.0.1",
+    "postcss-bem": "^0.4.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-import": "^10.0.0",
     "postcss-load-config": "^1.2.0",
