--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build-dev": "node scripts/build-dev.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
