--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "html-to-draftjs": "^0.1.0-beta7",
     "isomorphic-fetch": "^2.2.1",
     "lazyimage": "^2.1.2",
-    "query-string": "^4.3.4",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.5.10",
+    "query-string": "^4.3.4",
     "rc-queue-anim": "^1.0.5",
     "rc-tween-one": "^1.2.7",
     "react": "^15.5.4",
