--- a/.babelrc
+++ b/.babelrc
@@ -8,8 +8,6 @@
   "plugins": [
     "transform-runtime",
     "transform-decorators-legacy",
-    ["import", {
-      "libraryName": "antd"
-    }]
+    ["import", { "libraryName": "antd", "style": "css" }]
   ]
 }
