--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "webpack-hot-middleware": "^2.18.0",
     "webpack-manifest-plugin": "1.1.0",
     "webpack-merge": "^4.1.0",
+    "webpack-parallel-uglify-plugin": "^0.4.2",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
