--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.5.4",
     "react-draft-wysiwyg": "^1.10.0",
+    "react-lz-editor": "^0.10.16",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
