:sparkles: add some article feature

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "query-string": "^4.3.4",
     "rc-queue-anim": "^1.0.5",
     "rc-tween-one": "^1.2.7",
-    "react": "^15.5.4",
+    "react": "^15.6.1",
+    "react-copy-to-clipboard": "^5.0.0",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.5.4",
